// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package disparos;

service Disparo {

  rpc dimeCentroDianna (Vacio) returns (Distancia) {}

  rpc dispararCannon (InfoDisparo) returns (Distancia) {}

  rpc mejorDisparo (Vacio) returns (Usuario) {}
}

message Vacio{}

message Distancia {
    float distancia = 1;
}

message InfoDisparo {
    string usuario = 1;
    float angulo = 2;
    float velocidad = 3;
}

message Usuario {
    string usuario = 2;
}                                                      